--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     transition: all 0.3s ease;
     box-shadow: 0 0 15px var(--magenta);
     position: fixed;
-    bottom: 20px;
+    bottom: 570px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 9999;
@@ -607,15 +607,22 @@
             }
             
         });
-    </script>
-    <script type="text/javascript">
-	atOptions = {
-		'key' : '6bc57606a64053cac9a4320f10365342',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
+	</script>
+    <div style="position: fixed; bottom: 0; left: 50%; transform: translateX(-50%); width: 320px; height: 50px; z-index: 99999; background: #000; padding: 5px 0;">
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '6bc57606a64053cac9a4320f10365342',
+      'format' : 'iframe',
+      'height' : 50,
+      'width' : 320,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.highperformanceformat.com/6bc57606a64053cac9a4320f10365342/invoke.js"></script>
+</div>
 	};
+
+	
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/6bc57606a64053cac9a4320f10365342/invoke.js"></script>
 
